<resources>
    <!-- Strings related to login -->
    <string name="app_name">TutoU</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="or">Or</string>
    <string name="CanvasLogin">Login with Canvas</string>
    <string name="ImageDescrip">Canvas Logo</string>
    <string name="Confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_tutorias">Mis tutorias</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="mi_horario">Mi horario</string>
    <string name="Not">Notificaciones</string>
    <string name="Tuto">Mis Tutorias</string>
    <string name="Hora">Mi Horario</string>
    <string name="Create_an_acount">Crea una cuenta</string>
    <string name="Select_schedule">Seleccione un horario</string>
    <string name="Create_user">Cree su Usuario</string>
    <string name="Name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="e_mail">E-mail</string>
    <string name="carnet">Carnet</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="create">Crear</string>
</resources>
