<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TabMenu">

    <!-- TODO: Update blank fragment layout -->
    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:tabBackground="@color/blue_dark"
        app:tabIndicatorColor="@color/blue_dark"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/white">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mis_tutorias"
            android:onClick="ayuwoki"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificaciones"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_horario"/>
    </android.support.design.widget.TabLayout>

</FrameLayout>