<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal.menu_principal">

    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/lmenu-principal"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:tabBackground="@color/blue_dark"
            app:tabIndicatorColor="@color/blue_dark"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/CustomText"
            app:tabTextColor="@color/white">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mis_tutorias" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificaciones" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_horario" />
        </android.support.design.widget.TabLayout>

        <fragment
            android:id="@+id/fragment"
            android:name="com.example.uvg_horario.Fragments.BlankFragment"
            android:layout_width="match_parent"
            android:layout_height="535dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>